--- a/dist.ini
+++ b/dist.ini
@@ -26,10 +26,10 @@ format = %v %{yyyy-MM-dd HH:mm:ss}d
 [MetaConfig]
 [MetaJSON]
 [MetaResources]
-repository.web = https://github.com/ology/{{$dist->name}}
+repository.web = https://github.com/ology/Lingua-EN-Opinion
 repository.type = git
-bugtracker.mailto = bug-{{$dist->name}}@rt.cpan.org
-bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name={{$dist->name}}
+bugtracker.mailto = bug-Lingua-EN-Opinion@rt.cpan.org
+bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Lingua-EN-Opinion
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
