--- a/dist.ini
+++ b/dist.ini
@@ -46,6 +46,7 @@ stopwords = Liu
 stopwords = Minqing
 stopwords = SIGKDD
 stopwords = th
+stopwords = Saif
 
 [GatherDir]
 exclude_filename = LICENSE
