We need Moo 2 at least

--- a/dist.ini
+++ b/dist.ini
@@ -48,6 +48,9 @@ stopwords = SIGKDD
 stopwords = th
 stopwords = Saif
 
+[Prereqs]
+Moo = 2
+
 [GatherDir]
 exclude_filename = LICENSE
 [PruneCruft]
