Re-enable optional stemming

--- a/dist.ini
+++ b/dist.ini
@@ -7,6 +7,8 @@ copyright_year   = 2018
 [VersionFromModule]
 [MinimumPerl]
 [AutoPrereqs]
+skip = ^WordNet::QueryData
+skip = ^WordNet::stem
 
 [CheckChangesHasContent]
 [NextRelease]
@@ -47,6 +49,7 @@ stopwords = Minqing
 stopwords = SIGKDD
 stopwords = th
 stopwords = Saif
+stopwords = stemmer
 
 [Prereqs]
 Moo = 2
