--- a/dist.ini
+++ b/dist.ini
@@ -27,11 +27,7 @@ format = %v %{yyyy-MM-dd HH:mm:ss}d
 
 [MetaConfig]
 [MetaJSON]
-[MetaResources]
-repository.web = https://github.com/ology/Lingua-EN-Opinion
-repository.type = git
-bugtracker.mailto = bug-Lingua-EN-Opinion@rt.cpan.org
-bugtracker.web    = https://rt.cpan.org/Public/Dist/Display.html?Name=Lingua-EN-Opinion
+[GithubMeta]
 
 [Test::PodSpelling]
 wordlist = Pod::Wordlist
